--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #   Main Configs   #
 # ---------------- #
 baseurl: "mzlogin"
-url: https://dulieutonghop.com
+url: https://dulieutonghop.com/mzlogin
 date_format: "ordinal"
 title: 码志
 subtitle: "公众号：闷骚的程序员"
